--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,15 @@ services:
   api:
     container_name: go_api
     build:
-      context: ./backend/src:/usr/src/api
+      context: ./backend
       dockerfile: Dockerfile
       args:
         - API_PORT=${API_PORT}
         - GO_VERSION=${GO_VERSION}
         - API_CODE_LOCAL_PATH=${API_CODE_LOCAL_PATH}
         - API_CODE_WORKDIR=${API_CODE_WORKDIR}
-      volumes:
-        - ${API_CODE_LOCAL_PATH}:${API_CODE_WORKDIR}
-      ports:
-        - ${API_PORT}:${API_PORT}
-      tty: true
+    volumes:
+      - ${API_CODE_LOCAL_PATH}:${API_CODE_WORKDIR}
+    ports:
+      - ${API_PORT}:${API_PORT}
+    tty: true
