--- a/.env.local
+++ b/.env.local
@@ -1,14 +1,16 @@
 VOLUMES_DRIVER=local
 ### Paths #################################################
-# dokcerのコンテナの中でのディレクトリを指定
+HOST_NAME=host.docker.internal
+# dokcerのコンテナの中でのディレクトリ
 API_CODE_WORKDIR=/backend/src/api
-# ローカル環境のディレクトリの場所を指定
+# ローカル環境のディレクトリの場所
 API_CODE_LOCAL_PATH=../src/api
 
 ### PORT #################################################
-# ローカルホストでアクセスするポートの指定
+# ローカルホストでアクセスするポート
+APP_PORT=3000
 API_PORT=8000
 
 ### VERSIONS #################################################
-# 今回使用するGoのバージョンを指定。
+# 今回使用するGoのバージョン
 GO_VERSION=1.16
