--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,23 @@
 version: "3"
 services:
+  web:
+    container_name: web
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    environment:
+      - HOST_NAME=${HOST_NAME}
+      - APP_PORT=${APP_PORT}
+    volumes:
+      - ./nginx/templates:/etc/nginx/templates
+      # - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/logs/:/var/log/nginx/
+    ports:
+      - "80:80"
+    depends_on:
+      - app
+      - api
+    tty: true
   app:
     container_name: react_app
     privileged: true
@@ -10,10 +28,14 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile
+    environment:
+      - APP_PORT=${APP_PORT}
     ports:
-      - "3000:3000"
+      - ${APP_PORT}:${APP_PORT}
     volumes:
       - ./app/src:/usr/src/app
+    depends_on:
+      - api
   api:
     container_name: go_api
     build:
