next.jsの環境構築

--- a/.env.local
+++ b/.env.local
@@ -1,16 +1,16 @@
 VOLUMES_DRIVER=local
 ### Paths #################################################
 HOST_NAME=host.docker.internal
-# dokcerのコンテナの中でのディレクトリ
-API_CODE_WORKDIR=/backend/src/api
-# ローカル環境のディレクトリの場所
-API_CODE_LOCAL_PATH=../src/api
+# dokcerのコンテナ内のディレクトリ
+APP_WORKDIR=/usr/app/src
+API_WORKDIR=/usr/api/src
+# ローカル環境のディレクトリ
+APP_LOCAL_PATH=./app/src
+API_LOCAL_PATH=./backend/api/src
+
+HOT_RELOAD=true
 
 ### PORT #################################################
-# ローカルホストでアクセスするポート
+# ローカルホストのアクセスポート
 APP_PORT=3000
 API_PORT=8000
-
-### VERSIONS #################################################
-# 今回使用するGoのバージョン
-GO_VERSION=1.16
