[clean]: マルチステージビルドを利用してDockerfileを最適化

--- a/.env.local
+++ b/.env.local
@@ -5,12 +5,17 @@ HOST_NAME=host.docker.internal
 APP_WORKDIR=/usr/app/src
 API_WORKDIR=/usr/api/src
 # ローカル環境のディレクトリ
-APP_LOCAL_PATH=./app/src
-API_LOCAL_PATH=./backend/api/src
-
-HOT_RELOAD=true
+FRONT_LOCAL_PATH=./task_manage_front/src
+BACK_LOCAL_PATH=./task_manage_back/src
 
 ### PORT #################################################
-# ローカルホストのアクセスポート
-APP_PORT=3000
-API_PORT=8000
+# アクセスポート
+FRONT_PORT=3000
+BACK_PORT=8000
+
+### VERSION ##############################################
+NODE_VER=16
+GO_VER=1.14
+
+### OTHER ################################################
+HOT_RELOAD=true
