--- a/task_manage_front/Dockerfile
+++ b/task_manage_front/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16 as dev
+FROM node:16-bullseye-slim AS dev
 ARG APP_WORKDIR
 WORKDIR ${APP_WORKDIR}
 # 依存パッケージインストール
@@ -6,7 +6,7 @@ COPY ./src/package*.json ./
 RUN npm ci --only=production
 
 # Build環境
-FROM node:16 as builder
+FROM node:16-bullseye-slim AS builder
 ARG APP_WORKDIR
 WORKDIR ${APP_WORKDIR}
 COPY ./src/package*.json ./
@@ -15,15 +15,15 @@ COPY ./src .
 RUN npm run build
 
 # 実行環境
-FROM gcr.io/distroless/nodejs:debug
+# debug image set for each language provides a busybox shell to enter.
+FROM gcr.io/distroless/nodejs:16-debug
+ENV NODE_ENV development
 ARG APP_WORKDIR
-ARG APP_PORT
 WORKDIR ${APP_WORKDIR}
-ENV NODE_ENV production
-USER nonroot
 COPY --from=builder ${APP_WORKDIR}/public ./public
-COPY --from=builder ${APP_WORKDIR}/.next ./.next
+COPY --from=builder --chown=nonroot:nonroot ${APP_WORKDIR}/.next ./.next
 COPY --from=dev ${APP_WORKDIR}/node_modules ./node_modules
 COPY --from=builder ${APP_WORKDIR}/package.json ./package.json
-EXPOSE ${APP_PORT}
-CMD [ "node_modules/.bin/next","start"]
+USER nonroot
+EXPOSE 3000
+CMD ["node_modules/.bin/next","dev"]
