--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - APP_PORT=${APP_PORT}
     volumes:
       - ./nginx/templates:/etc/nginx/templates
-      # - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/logs/:/var/log/nginx/
     ports:
       - "80:80"
@@ -21,14 +20,16 @@ services:
   app:
     container_name: next_app
     build:
-      context: ./app
+      context: ./task_manage_front
       dockerfile: Dockerfile
       args:
         - APP_PORT=${APP_PORT}
         - APP_WORKDIR=${APP_WORKDIR}
         - APP_LOCAL_PATH=${APP_LOCAL_PATH}
         - NODE_VER=${NODE_VER}
-        - HOT_RELOAD=${HOT_RELOAD}
+    tty: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     volumes:
       - ${APP_LOCAL_PATH}:${APP_WORKDIR}
       - node_modules:${APP_WORKDIR}/node_modules
@@ -36,13 +37,12 @@ services:
       - ${APP_PORT}:${APP_PORT}
     privileged: true
     stdin_open: true
-    tty: true
     depends_on:
       - api
   api:
     container_name: go_api
     build:
-      context: ./backend
+      context: ./task_manage_back
       dockerfile: Dockerfile
       args:
         - API_PORT=${API_PORT}
@@ -53,6 +53,14 @@ services:
     ports:
       - ${API_PORT}:${API_PORT}
     tty: true
+  # mysql:
+  #   platform: linux/amd64
+  #   image: mysql:8.0.29
+  #   environment:
+  #     - TZ: Asia/Tokyo
+  #   volumes:
+  #     - data-volume: /var/lib/mysql
 
 volumes:
   node_modules:
+  # data-volume:
