--- a/.env.local
+++ b/.env.local
@@ -5,8 +5,8 @@ HOST_NAME=host.docker.internal
 APP_WORKDIR=/usr/app/src
 API_WORKDIR=/usr/api/src
 # ローカル環境のディレクトリ
-FRONT_LOCAL_PATH=./task_manage_front/src
-BACK_LOCAL_PATH=./task_manage_back/src
+APP_LOCAL_PATH=./task_manage_front/src
+API_LOCAL_PATH=./task_manage_back/src
 
 ### PORT #################################################
 # アクセスポート
