--- a/task_manage_front/src/package.json
+++ b/task_manage_front/src/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "13.1.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
